--- a/simulation-core/public/map.scss
+++ b/simulation-core/public/map.scss
@@ -63,6 +63,7 @@ canvas {
   background: rgba(30, 60, 114, 0.5);
   padding: 20px;
   overflow-y: auto;
+  scrollbar-gutter: stable;
   border-left: 2px solid #444;
 }
 
